<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>win_camera</name>
  <version>0.2.0</version>
  <description>win_camera uses Windows Media Foundation to capture camera image.
  </description>
  <maintainer email="susohoni@microsoft.com">Sudhanshu Sohoni</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>image_transport</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>camera_info_manager</depend>
  <depend>compressed_image_transport</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nodelet plugin="${prefix}/win_camera_nodelets.xml"/>
  </export>
</package>
