<?xml version="1.0"?>
<package>
  <name>ros_msft_camera</name>
  <version>0.1.1</version>
  <description>msft_camera uses Windows Media Foundation to capture camera image.
  </description>
  <maintainer email="susohoni@microsoft.com">Sudhanshu Sohoni</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>roslint</build_depend>
  
  
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>camera_info_manager</run_depend>

  <export>
    <nodelet plugin="${prefix}/msft_camera_nodelets.xml"/>
  </export>

</package>
